--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:support-v13:25.1.0'
+    compile 'com.android.support:support-fragment:25.1.0'
+    compile 'com.android.support:support-core-ui:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:percent:25.1.0'
     testCompile 'junit:junit:4.12'
 }
