--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,30 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        
-        <service android:name=".service.FightEngineService" />
-        
-        <provider
-            android:authorities="com.playposse.heavybagzombie"
-            android:name=".provider.BagZombieContentProvider" />
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".activity.SlapDetectionActivity">
+        <service android:name=".service.FightEngineService" />
+
+        <provider
+            android:name=".provider.BagZombieContentProvider"
+            android:authorities="com.playposse.heavybagzombie" />
+
+        <activity
+            android:name=".activity.MicrophoneCalibrationActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.ManualFightActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RandomFightActivity" />
-        <activity android:name=".activity.FightActivity"></activity>
     </application>
-
 </manifest>
