--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,29 +5,28 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name="com.playposse.heavybagzombie.BagZombieApplication"
+        android:name=".BagZombieApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        <service android:name="com.playposse.heavybagzombie.service.FightEngineService" />
+        <service android:name=".service.FightEngineService" />
 
         <provider
-            android:name="com.playposse.heavybagzombie.provider.BagZombieContentProvider"
+            android:name=".provider.BagZombieContentProvider"
             android:authorities="com.playposse.heavybagzombie" />
 
         <activity
-            android:name="com.playposse.heavybagzombie.activity.MicrophoneCalibrationActivity"
+            android:name=".activity.MicrophoneCalibrationActivity"
             android:launchMode="singleTop"
-            android:parentActivityName="com.playposse.heavybagzombie.activity.MainActivity" />
+            android:parentActivityName=".activity.MainActivity" />
         <activity
-            android:name="com.playposse.heavybagzombie.activity.ManualFightSetupActivity"
+            android:name=".activity.ManualFightSetupActivity"
             android:launchMode="singleTop"
-            android:parentActivityName="com.playposse.heavybagzombie.activity.MainActivity" />
+            android:parentActivityName=".activity.MainActivity" />
         <activity
-            android:name="com.playposse.heavybagzombie.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,5 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.ManualFightActivity"></activity>
     </application>
+
 </manifest>
