--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ManualFightActivity"></activity>
+        <activity
+            android:name=".activity.ManualFightActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activity.ManualFightSetupActivity" />
+        <activity
+            android:name=".activity.MicrophonePermissionNeededActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activity.MainActivity"></activity>
     </application>
 
 </manifest>
