--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-core-ui:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:percent:25.1.1'
+    compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
