--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity
             android:name=".activity.MicrophonePermissionNeededActivity"
             android:launchMode="singleTop"
-            android:parentActivityName=".activity.MainActivity"></activity>
+            android:parentActivityName=".activity.MainActivity" />
     </application>
 
 </manifest>
