--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "playposse.com.heavybagzombie"
+        applicationId "com.playposse.heavybagzombie"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:percent:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.google.android.gms:play-services-analytics:10.2.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
+
+apply plugin: 'com.google.gms.google-services'
